<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_abt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.subhechhu.automessage.AbtActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_height="100dp"
            app:srcCompat="@drawable/app_logo"
            android:id="@+id/imageView_logo"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo" />

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_text"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_20"
            android:textColor="@color/mainColor"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_below="@id/imageView_logo"/>

        <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_version"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_20"
            android:textColor="@color/mainColor"
            android:layout_below="@id/textView_text"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/padding_25"
        android:layout_height="@dimen/padding_25"
        app:srcCompat="@drawable/cl"
        android:id="@+id/imageView_cl"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_30"
            app:srcCompat="@drawable/developer"
            android:id="@+id/imageView_developer"
            android:contentDescription="@string/developer" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_10"
            android:gravity="center">
            <Button
                android:layout_width="@dimen/padding_30"
                android:layout_height="@dimen/padding_30"
                android:id="@+id/button_twitter"
                android:background="@drawable/twitter"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10" />
            <Button
                android:layout_width="@dimen/padding_30"
                android:layout_height="@dimen/padding_30"
                android:id="@+id/button_facebook"
                android:background="@drawable/facebook"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10" />
            <Button
                android:layout_height="@dimen/padding_25"
                android:layout_width="@dimen/padding_25"
                android:id="@+id/button_linkedin"
                android:background="@drawable/insta"
                android:layout_marginStart="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
