<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/text_16"
    android:background="@color/mainColor">

    <ProgressBar
        style="?android:attr/progressBarStyleLargeInverse"
        android:id="@+id/progressBar_login"
        android:visibility="visible"
        android:indeterminate="false"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            android:layout_marginBottom="@dimen/padding_10">
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_overlay"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:hint="@string/enter_email" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Let_me_in"
            android:textColor="@color/white"
            android:background="@color/registerColor"
            android:textStyle="bold"
            android:layout_below="@+id/textInputLayout"
            android:layout_alignParentStart="false"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/logo"
        android:src="@drawable/app_logo_white"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="@dimen/padding_5"
        android:id="@+id/imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="90dp"
        android:layout_height="90dp" />

    <TextView
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/progressBar_splash"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_75"
        android:textColor="@color/registerColor"
        android:textSize="@dimen/text_20" />

</RelativeLayout>