<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.subhechhu.automessage.message.MessageActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBar_message">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar_message">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_body"
            android:padding="@dimen/padding_20">
            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spinner_medium"
                android:layout_marginTop="@dimen/padding_5"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_height="55dp" />
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/padding_50"
                android:background="@drawable/border"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                android:id="@+id/relativeLayout_contact"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_marginTop="@dimen/padding_5"
                android:clickable="true"
                android:onClick="ViewClick">
                <ImageView
                    app:srcCompat="@drawable/add_user"
                    android:id="@+id/imageView_userIcon"
                    android:contentDescription="@string/usericon"
                    tools:targetApi="m"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="false"/>
                <TextView
                    android:text="@string/userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:id="@+id/textView_userName"
                    android:clickable="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/padding_50"
                android:background="@drawable/border"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                android:id="@+id/relativeLayout_date"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_marginTop="@dimen/padding_5"
                android:clickable="true"
                android:onClick="ViewClick">
                <ImageView
                    app:srcCompat="@drawable/add_calender"
                    android:id="@+id/imageView_dateIcon"
                    android:contentDescription="@string/usericon"
                    tools:targetApi="m"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="false"/>
                <TextView
                    android:text="@string/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:id="@+id/textView_date"
                    android:clickable="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/padding_50"
                android:background="@drawable/border"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                android:id="@+id/relativeLayout_time"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_marginTop="@dimen/padding_5"
                android:clickable="true"
                android:onClick="ViewClick">
                <ImageView
                    app:srcCompat="@drawable/add_watch"
                    android:id="@+id/imageView_timeIcon"
                    android:contentDescription="@string/usericon"
                    tools:targetApi="m"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="false"/>
                <TextView
                    android:text="@string/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:id="@+id/textView_time"
                    android:clickable="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/padding_50"
                android:background="@drawable/border"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                android:id="@+id/relativeLayout_message"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_marginTop="@dimen/padding_5"
                android:clickable="true"
                android:onClick="ViewClick">
                <ImageView
                    app:srcCompat="@drawable/add_message"
                    android:id="@+id/imageView_messageIcon"
                    android:contentDescription="@string/usericon"
                    tools:targetApi="m"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="false"/>
                <TextView
                    android:text="@string/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:id="@+id/textView_message"
                    android:clickable="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_description"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"/>

            <Button
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/button_save"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:background="@color/colorPrimaryDark"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/text_16"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
